--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "@tarojs/taro": "^1.3.25",
     "@types/jest": "^24.0.23",
+    "@types/qs": "^6.9.0",
     "husky": "^3.1.0",
     "standard-version": "^7.0.0",
     "tsdx": "^0.11.0",
@@ -38,6 +40,10 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "graphql-tag": "^2.10.1",
+    "qs": "^6.9.1",
+    "stook": "^0.1.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "taro-axios": "^0.7.0",
     "taro-stook": "0.0.1"
   }
