--- a/package.json
+++ b/package.json
@@ -17,11 +17,6 @@
     "release": "standard-version"
   },
   "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
   "prettier": {
     "printWidth": 100,
     "tabWidth": 2,
@@ -31,6 +26,8 @@
   },
   "devDependencies": {
     "@tarojs/taro": "^1.3.25",
+    "@types/backo2": "^1.0.1",
+    "@types/eventemitter3": "^2.0.2",
     "@types/jest": "^24.0.23",
     "@types/qs": "^6.9.0",
     "husky": "^3.1.0",
@@ -40,6 +37,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "qs": "^6.9.1",
     "subscriptions-transport-ws": "^0.9.16",
