chore: handle type error

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@types/qs": "^6.9.0",
     "husky": "^3.1.0",
     "standard-version": "^7.0.1",
-    "taro-stook": "0.1.2",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
     "typescript": "^3.7.2"
@@ -41,7 +40,9 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "qs": "^6.9.1",
+    "react-fast-compare": "^3.0.2",
     "subscriptions-transport-ws": "^0.9.16",
-    "taro-axios": "^0.7.0"
+    "taro-axios": "^0.7.0",
+    "taro-stook": "0.1.2"
   }
 }
