--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "declaration": true,
     "sourceMap": true,
     "rootDir": "./",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strict": false,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": false,
     "noImplicitThis": true,
